--- a/main.less
+++ b/main.less
@@ -1,5 +1,5 @@
-@import "components/variables.less"
-@import "components/buttons.less"
-@import "components/nav.less"
-@import "components/forms.less"
-@import "components/type.less"
+@import "components/variables.less";
+@import "components/buttons.less";
+@import "components/nav.less";
+@import "components/forms.less";
+@import "components/type.less";
