--- a/main.less
+++ b/main.less
@@ -1,3 +1,4 @@
+// License found at https://github.com/krrishd/some-css/blob/master/LICENSE
 @import "components/variables.less";
 @import "components/buttons.less";
 @import "components/nav.less";
