Initialized Demo Pages

--- a/components/buttons.less
+++ b/components/buttons.less
@@ -1,1 +1,10 @@
 // Buttons
+
+.bn {
+	display: inline-block;
+	padding: 5px;
+	background: @grey;
+	border-radius: 5px;
+	border-bottom: 2px solid @dark-grey;
+	cursor: pointer;
+}
