--- a/components/buttons.less
+++ b/components/buttons.less
@@ -9,4 +9,20 @@
 	border-radius: 5px;
 	border-bottom: 2px solid @dark-grey;
 	cursor: pointer;
+	&.red {
+		display: inline-block;
+		padding: 5px;
+		background: @red;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-red;
+		cursor: pointer;
+	}
+	&.blue {
+		display: inline-block;
+		padding: 5px;
+		background: @blue;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-blue;
+		cursor: pointer;
+	}
 }
