--- a/components/variables.less
+++ b/components/variables.less
@@ -2,3 +2,19 @@
 
 @grey: #bdc3c7;
 @dark-grey: #95a5a6;
+@red: #e74c3c;
+@dark-red: #c0392b;
+@aqua: #1abc9c;
+@dark-aqua: #16a085;
+@yellow: #f1c40f;
+@dark-yellow:#f39c12;
+@orange: #e67e22;
+@dark-orange:#d35400;
+@blue:#3498db;
+@dark-blue:#2980b9;
+@purple:#9b59b6;
+@dark-purple:#8e44ad;
+@light-grey:#ecf0f1;
+@really-dark-grey:#7f8c8d;
+@really-dark-blue:#34495e;
+@very-dark-blue:#2c3e50;
