--- a/components/buttons.less
+++ b/components/buttons.less
@@ -16,6 +16,7 @@
 		border-radius: 5px;
 		border-bottom: 2px solid @dark-red;
 		cursor: pointer;
+		color:white;
 	}
 	&.blue {
 		display: inline-block;
@@ -24,5 +25,60 @@
 		border-radius: 5px;
 		border-bottom: 2px solid @dark-blue;
 		cursor: pointer;
+		color:white;
+	}
+	&.green {
+		display: inline-block;
+		padding: 5px;
+		background: @green;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-green;
+		cursor: pointer;
+		color:white;
+	}
+	&.yellow {
+		display: inline-block;
+		padding: 5px;
+		background: @yellow;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-yellow;
+		cursor: pointer;
+		color:black;
+	}
+	&.aqua {
+		display: inline-block;
+		padding: 5px;
+		background: @aqua;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-aqua;
+		cursor: pointer;
+		color:white;
+	}
+	&.orange {
+		display: inline-block;
+		padding: 5px;
+		background: @orange;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-orange;
+		cursor: pointer;
+		color:white;
+	}
+	&.purple {
+		display: inline-block;
+		padding: 5px;
+		background: @purple;
+		border-radius: 5px;
+		border-bottom: 2px solid @dark-purple;
+		cursor: pointer;
+		color:white;
+	}
+	&.dark {
+		display: inline-block;
+		padding: 5px;
+		background: @really-dark-blue;
+		border-radius: 5px;
+		border-bottom: 2px solid @very-dark-blue;
+		cursor: pointer;
+		color:white;
 	}
 }
