--- a/components/variables.less
+++ b/components/variables.less
@@ -12,6 +12,8 @@
 @dark-orange:#d35400;
 @blue:#3498db;
 @dark-blue:#2980b9;
+@green: #2ecc71;
+@dark-green: #27ae60;
 @purple:#9b59b6;
 @dark-purple:#8e44ad;
 @light-grey:#ecf0f1;
