--- a/components/buttons.less
+++ b/components/buttons.less
@@ -9,6 +9,9 @@
 	border-radius: 5px;
 	border-bottom: 2px solid @dark-grey;
 	cursor: pointer;
+	&.big {
+		padding:10px !important;
+	}
 	&.red {
 		display: inline-block;
 		padding: 5px;
