--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
   cursor: pointer;
 }
 .bn.big {
-  padding: 10px !important;
+  padding: 0 10px !important;
 }
 .bn.red {
   display: inline-block;
