--- a/components/buttons.less
+++ b/components/buttons.less
@@ -10,7 +10,7 @@
 	border-bottom: 2px solid @dark-grey;
 	cursor: pointer;
 	&.big {
-		padding: 0 10px !important;
+		padding: 5px 10px !important;
 	}
 	&.red {
 		display: inline-block;
