--- a/components/buttons.css
+++ b/components/buttons.css
@@ -16,7 +16,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #c0392b;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.blue {
   display: inline-block;
@@ -25,7 +25,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #2980b9;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.green {
   display: inline-block;
@@ -34,7 +34,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #27ae60;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.yellow {
   display: inline-block;
@@ -43,7 +43,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #f39c12;
   cursor: pointer;
-  color: black;
+  color: #000000;
 }
 .bn.aqua {
   display: inline-block;
@@ -52,7 +52,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #16a085;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.orange {
   display: inline-block;
@@ -61,7 +61,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #d35400;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.purple {
   display: inline-block;
@@ -70,7 +70,7 @@
   border-radius: 5px;
   border-bottom: 2px solid #8e44ad;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
 .bn.dark {
   display: inline-block;
@@ -79,5 +79,5 @@
   border-radius: 5px;
   border-bottom: 2px solid #2c3e50;
   cursor: pointer;
-  color: white;
+  color: #ffffff;
 }
