--- a/components/type.less
+++ b/components/type.less
@@ -1,3 +1,16 @@
 // Typography
 
 @import "variables.less";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Ovo);
+
+@sans: Open Sans, Helvetica, Arial, sans-serif;
+@serif: Ovo, Times New Roman, Georgia, serif;
+
+body {
+	font-family:@sans;
+}
+
+p, article, blockquote, a {
+	font-family: @serif;
+}
