--- a/components/type.css
+++ b/components/type.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700);
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700');
 
-@import url(http://fonts.googleapis.com/css?family=Ovo);
+@import url('http://fonts.googleapis.com/css?family=Ovo');
 body {
   font-family: Open Sans, Helvetica, Arial, sans-serif;
 }
