--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700);
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700');
 
-@import url(http://fonts.googleapis.com/css?family=Ovo);
+@import url('http://fonts.googleapis.com/css?family=Ovo');
 .bn {
   display: inline-block;
   padding: 5px;
