--- a/components/type.less
+++ b/components/type.less
@@ -1,8 +1,8 @@
 // Typography
 
 @import "variables.less";
-@import "http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700"
-@import "http://fonts.googleapis.com/css?family=Ovo"
+@import "http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700";
+@import "http://fonts.googleapis.com/css?family=Ovo";
 
 @sans: Open Sans, Helvetica, Arial, sans-serif;
 @serif: Ovo, Times New Roman, Georgia, serif;
