--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+@import "http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700";
+
+@import "http://fonts.googleapis.com/css?family=Ovo";
 .bn {
   display: inline-block;
   padding: 5px;
@@ -80,4 +83,13 @@
   border-bottom: 2px solid #2c3e50;
   cursor: pointer;
   color: #ffffff;
+}
+body {
+  font-family: Open Sans, Helvetica, Arial, sans-serif;
+}
+p,
+article,
+blockquote,
+a {
+  font-family: Ovo, Times New Roman, Georgia, serif;
 }
