--- a/components/buttons.css
+++ b/components/buttons.css
@@ -7,7 +7,11 @@
   cursor: pointer;
 }
 .bn.big {
-  padding: 5px 10px !important;
+  padding: 10px 20px !important;
+}
+.bn.small {
+  padding: 3px;
+  font-size: 7px;
 }
 .bn.red {
   display: inline-block;
