--- a/components/buttons.less
+++ b/components/buttons.less
@@ -20,7 +20,11 @@
 	border-bottom: 2px solid @dark-grey;
 	cursor: pointer;
 	&.big {
-		padding: 5px 10px !important;
+		padding: 10px 20px !important;
+	}
+	&.small {
+		padding:3px;
+		font-size:7px;
 	}
 	&.red {
 		.button(@red, @dark-red, white);
