--- a/components/type.less
+++ b/components/type.less
@@ -33,6 +33,8 @@
   src: local('Ovo'), url("http://themes.googleusercontent.com/static/fonts/ovo/v4/WqVRExPBh0NGpNgcgzBACQ.woff") format('woff');
 }
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300italic);
+
 @sans: Open Sans, Helvetica, Arial, sans-serif;
 @serif: Ovo, Times New Roman, Georgia, serif;
 
