--- a/components/type.css
+++ b/components/type.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300italic);
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
