--- a/components/type.css
+++ b/components/type.css
@@ -36,5 +36,5 @@ p,
 article,
 blockquote,
 a {
-  font-family: Ovo, Times New Roman, Georgia, serif;
+  font-family: Roboto, Open Sans, Times New Roman, Georgia, serif;
 }
