--- a/components/type.less
+++ b/components/type.less
@@ -36,7 +36,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300italic);
 
 @sans: Open Sans, Helvetica, Arial, sans-serif;
-@serif: Ovo, Times New Roman, Georgia, serif;
+@serif: Roboto, Open Sans, Times New Roman, Georgia, serif;
 
 body {
 	font-family:@sans;
