--- a/main.css
+++ b/main.css
@@ -123,5 +123,5 @@ p,
 article,
 blockquote,
 a {
-  font-family: Ovo, Times New Roman, Georgia, serif;
+  font-family: Roboto, Open Sans, Times New Roman, Georgia, serif;
 }
