--- a/components/buttons.less
+++ b/components/buttons.less
@@ -10,6 +10,16 @@
 	border-bottom: 2px solid @bottom;
 	cursor: pointer;
 	color:@text;
+	&.:hover {
+		background: darken(@bg, 5%);
+		border-bottom: 2px solid darken(@bottom, 5%);
+	}
+	&.:active {
+		background:darken(@bg, 5%);
+		border-bottom:1px solid darken(@bottom, 5%);
+		position:relative;
+		bottom:1px;
+	}
 }
 
 .bn {
