--- a/components/buttons.less
+++ b/components/buttons.less
@@ -40,7 +40,7 @@
 	}
 	&.red {
 		.button(@red, @dark-red, white);
-		&.buttonvr (@red, @dark-red, white);
+		&.buttonhvr (@red, @dark-red, white);
 	}
 	&.blue {
 		.button(@blue, @dark-blue, white);
