--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+body {
+  font-family: Droid Sans, Helvetica, Arial, sans-serif;
+}
 .bn {
   display: inline-block;
   padding: 5px;
@@ -167,5 +170,6 @@
   bottom: 1px;
 }
 body {
-  font-family: Droid Sans, Helvetica, Arial, sans-serif;
+  background: #ecf0f1;
+  padding: 10px;
 }
