--- a/main.less
+++ b/main.less
@@ -1,6 +1,11 @@
 // License found at https://github.com/krrishd/some-css/blob/master/LICENSE
 @import "components/variables.less";
-@import "components/buttons.less";
-@import "components/nav.less";
-@import "components/forms.less";
 @import "components/type.less";
+@import "components/nav.less";
+@import "components/buttons.less";
+@import "components/forms.less";
+
+body {
+	background:@light-grey;
+	padding:10px;
+}
