--- a/components/forms.less
+++ b/components/forms.less
@@ -3,7 +3,10 @@
 @import "variables.less";
 
 input[type='text'] {
-padding: 5px;
-border-radius: 5px;
-border: 1px solid @grey;
+	padding: 5px;
+	border-radius: 5px;
+	border: 1px solid @grey;
+	&.:focus {
+		box-shadow: 1px 0px 7px 1px rgb(1, 69, 90);
+	}
 }
