--- a/components/forms.less
+++ b/components/forms.less
@@ -7,7 +7,7 @@ input[type='text'] {
 	border-radius: 5px;
 	border: 1px solid @grey;
 	
-	&.:focus {
+	&:focus {
 		box-shadow: 1px 0px 7px 1px rgb(1, 69, 90);
 	}
 }
