--- a/components/forms.less
+++ b/components/forms.less
@@ -8,6 +8,6 @@ input[type='text'] {
 	border: 1px solid @grey;
 	
 	&:focus {
-		box-shadow: 1px 0px 7px 1px rgb(1, 69, 90);
+		box-shadow: 1px 0px 7px 1px #568796;
 	}
 }
