--- a/components/buttons.less
+++ b/components/buttons.less
@@ -21,7 +21,7 @@
 	background:darken(@bg, 5%);
 	border-bottom:1px solid darken(@bottom, 5%);
 	position:relative;
-	bottom:0.35px;
+	top:0.35px;
 }
 
 .bn {
