--- a/components/forms.less
+++ b/components/forms.less
@@ -8,6 +8,8 @@ input[type='text'] {
 	border: 1px solid @grey;
 	
 	&:focus {
-		box-shadow: 1px 0px 7px 1px #568796;
+
+		box-shadow: 1px 0 7px 1px #aaa;
+		background: @light-grey;
 	}
 }
