--- a/components/forms.less
+++ b/components/forms.less
@@ -3,12 +3,13 @@
 @import "variables.less";
 
 input[type='text'] {
+	.transition;
 	padding: 5px;
 	border-radius: 5px;
 	border: 1px solid @grey;
 	
 	&:focus {
-
+		.transition;
 		box-shadow: 1px 0 7px 1px #aaa;
 		background: @light-grey;
 	}
