--- a/components/variables.less
+++ b/components/variables.less
@@ -21,3 +21,12 @@
 @really-dark-grey:#7f8c8d;
 @really-dark-blue:#34495e;
 @very-dark-blue:#2c3e50;
+
+//Mixins
+
+.transition {
+-webkit-transition: height .5s .5s ease-in-out;
+-moz-transition: height .5s .5s ease-in-out;
+-o-transition: height .5s .5s ease-in-out;
+-ms-transition: height .5s .5s ease-in-out;
+}
