--- a/components/variables.less
+++ b/components/variables.less
@@ -25,8 +25,8 @@
 //Mixins
 
 .transition {
--webkit-transition: height .5s .5s ease-in-out;
--moz-transition: height .5s .5s ease-in-out;
--o-transition: height .5s .5s ease-in-out;
--ms-transition: height .5s .5s ease-in-out;
+-webkit-transition: height 1.5s 1.5s ease-in-out;
+-moz-transition: height 1.5s 1.5s ease-in-out;
+-o-transition: height 1.5s 1.5s ease-in-out;
+-ms-transition: height 1.5s 1.5s ease-in-out;
 }
