--- a/main.css
+++ b/main.css
@@ -1,30 +1,18 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
 body {
   font-family: Droid Sans, Helvetica, Arial, sans-serif;
 }
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
 .bn {
   display: inline-block;
@@ -42,10 +30,7 @@ body {
   font-size: 10px;
 }
 .bn.red {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #e74c3c;
@@ -55,28 +40,19 @@ body {
   color: #ffffff;
 }
 .bn.red:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #e43725;
   border-bottom: 2px solid #ab3326;
 }
 .bn.red:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #e43725;
   border-bottom: 1px solid #ab3326;
   position: relative;
   top: 0.5px;
 }
 .bn.blue {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #3498db;
@@ -86,28 +62,19 @@ body {
   color: #ffffff;
 }
 .bn.blue:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #258cd1;
   border-bottom: 2px solid #2472a4;
 }
 .bn.blue:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #258cd1;
   border-bottom: 1px solid #2472a4;
   position: relative;
   top: 0.5px;
 }
 .bn.green {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #2ecc71;
@@ -117,28 +84,19 @@ body {
   color: #ffffff;
 }
 .bn.green:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #29b765;
   border-bottom: 2px solid #229955;
 }
 .bn.green:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #29b765;
   border-bottom: 1px solid #229955;
   position: relative;
   top: 0.5px;
 }
 .bn.yellow {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #f1c40f;
@@ -148,28 +106,19 @@ body {
   color: #000000;
 }
 .bn.yellow:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #dab10d;
   border-bottom: 2px solid #e08e0b;
 }
 .bn.yellow:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #dab10d;
   border-bottom: 1px solid #e08e0b;
   position: relative;
   top: 0.5px;
 }
 .bn.aqua {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #1abc9c;
@@ -179,28 +128,19 @@ body {
   color: #ffffff;
 }
 .bn.aqua:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #17a689;
   border-bottom: 2px solid #138a72;
 }
 .bn.aqua:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #17a689;
   border-bottom: 1px solid #138a72;
   position: relative;
   top: 0.5px;
 }
 .bn.orange {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #e67e22;
@@ -210,28 +150,19 @@ body {
   color: #ffffff;
 }
 .bn.orange:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #d67118;
   border-bottom: 2px solid #ba4a00;
 }
 .bn.orange:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #d67118;
   border-bottom: 1px solid #ba4a00;
   position: relative;
   top: 0.5px;
 }
 .bn.purple {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #9b59b6;
@@ -241,28 +172,19 @@ body {
   color: #ffffff;
 }
 .bn.purple:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #8f4bab;
   border-bottom: 2px solid #7f3d9b;
 }
 .bn.purple:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #8f4bab;
   border-bottom: 1px solid #7f3d9b;
   position: relative;
   top: 0.5px;
 }
 .bn.dark {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   display: inline-block;
   padding: 5px;
   background: #34495e;
@@ -272,43 +194,28 @@ body {
   color: #ffffff;
 }
 .bn.dark:hover {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #2b3c4e;
   border-bottom: 2px solid #233140;
 }
 .bn.dark:active {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   background: #2b3c4e;
   border-bottom: 1px solid #233140;
   position: relative;
   top: 0.5px;
 }
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
 input[type='text'] {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid #bdc3c7;
 }
 input[type='text']:focus {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
   box-shadow: 1px 0 7px 1px #aaa;
   background: #ecf0f1;
 }
