--- a/components/nav.css
+++ b/components/nav.css
@@ -1,6 +1,3 @@
 .transition {
-  -webkit-transition: height 1.5s 1.5s ease-in-out;
-  -moz-transition: height 1.5s 1.5s ease-in-out;
-  -o-transition: height 1.5s 1.5s ease-in-out;
-  -ms-transition: height 1.5s 1.5s ease-in-out;
+  transition: background 0.25s,color 0.25s,border 0.25s;
 }
