--- a/components/buttons.css
+++ b/components/buttons.css
@@ -1,5 +1,5 @@
 .transition {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
 .bn {
   display: inline-block;
@@ -17,7 +17,7 @@
   font-size: 10px;
 }
 .bn.red {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #e74c3c;
@@ -27,19 +27,19 @@
   color: #ffffff;
 }
 .bn.red:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #e43725;
   border-bottom: 2px solid #ab3326;
 }
 .bn.red:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #e43725;
   border-bottom: 1px solid #ab3326;
   position: relative;
   top: 0.5px;
 }
 .bn.blue {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #3498db;
@@ -49,19 +49,19 @@
   color: #ffffff;
 }
 .bn.blue:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #258cd1;
   border-bottom: 2px solid #2472a4;
 }
 .bn.blue:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #258cd1;
   border-bottom: 1px solid #2472a4;
   position: relative;
   top: 0.5px;
 }
 .bn.green {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #2ecc71;
@@ -71,19 +71,19 @@
   color: #ffffff;
 }
 .bn.green:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #29b765;
   border-bottom: 2px solid #229955;
 }
 .bn.green:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #29b765;
   border-bottom: 1px solid #229955;
   position: relative;
   top: 0.5px;
 }
 .bn.yellow {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #f1c40f;
@@ -93,19 +93,19 @@
   color: #000000;
 }
 .bn.yellow:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #dab10d;
   border-bottom: 2px solid #e08e0b;
 }
 .bn.yellow:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #dab10d;
   border-bottom: 1px solid #e08e0b;
   position: relative;
   top: 0.5px;
 }
 .bn.aqua {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #1abc9c;
@@ -115,19 +115,19 @@
   color: #ffffff;
 }
 .bn.aqua:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #17a689;
   border-bottom: 2px solid #138a72;
 }
 .bn.aqua:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #17a689;
   border-bottom: 1px solid #138a72;
   position: relative;
   top: 0.5px;
 }
 .bn.orange {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #e67e22;
@@ -137,19 +137,19 @@
   color: #ffffff;
 }
 .bn.orange:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #d67118;
   border-bottom: 2px solid #ba4a00;
 }
 .bn.orange:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #d67118;
   border-bottom: 1px solid #ba4a00;
   position: relative;
   top: 0.5px;
 }
 .bn.purple {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #9b59b6;
@@ -159,19 +159,19 @@
   color: #ffffff;
 }
 .bn.purple:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #8f4bab;
   border-bottom: 2px solid #7f3d9b;
 }
 .bn.purple:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #8f4bab;
   border-bottom: 1px solid #7f3d9b;
   position: relative;
   top: 0.5px;
 }
 .bn.dark {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #34495e;
@@ -181,12 +181,12 @@
   color: #ffffff;
 }
 .bn.dark:hover {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #2b3c4e;
   border-bottom: 2px solid #233140;
 }
 .bn.dark:active {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #2b3c4e;
   border-bottom: 1px solid #233140;
   position: relative;
