--- a/components/variables.less
+++ b/components/variables.less
@@ -25,5 +25,5 @@
 //Mixins
 
 .transition {
-transition: background 0.25s,color 0.25s,border 0.25s;
+transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
