--- a/components/forms.css
+++ b/components/forms.css
@@ -1,14 +1,14 @@
 .transition {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
 input[type='text'] {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid #bdc3c7;
 }
 input[type='text']:focus {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   box-shadow: 1px 0 7px 1px #aaa;
   background: #ecf0f1;
 }
