--- a/components/nav.css
+++ b/components/nav.css
@@ -1,3 +1,3 @@
 .transition {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
