--- a/components/type.css
+++ b/components/type.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 .transition {
-  transition: background 0.25s,color 0.25s,border 0.25s;
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
 body {
   font-family: Droid Sans, Helvetica, Arial, sans-serif;
